Etapa3/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_DO
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TK_OC_GE
    TK_OC_EQ
    TK_OC_NE
    TK_OC_AND
    TK_OC_OR
    TK_OC_FORWARD_PIPE
    TK_OC_BASH_PIPE
    TOKEN_ERRO


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | grammars program

    3 grammars: global_var_declaration
    4         | function_declaration

    5 global_var_declaration: TK_PR_STATIC decl ';'
    6                       | decl ';'

    7 decl: primitive_type identifier

    8 primitive_type: TK_PR_INT
    9               | TK_PR_FLOAT
   10               | TK_PR_CHAR
   11               | TK_PR_BOOL
   12               | TK_PR_STRING

   13 identifier: TK_IDENTIFICADOR
   14           | TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block
   16                     | primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

   17 function_parameters_list: %empty
   18                         | function_parameters_argument
   19                         | function_parameters_argument ',' function_parameters_list

   20 function_parameters_argument: TK_PR_CONST primitive_type TK_IDENTIFICADOR
   21                             | primitive_type TK_IDENTIFICADOR

   22 command_block: '{' command_list '}'

   23 command_list: command ';' command_list
   24             | loop_while command_list
   25             | loop_for command_list
   26             | command_block
   27             | %empty

   28 command: if_statement
   29        | local_var_declaration
   30        | shift_command
   31        | assignment_command
   32        | input_command
   33        | output_command
   34        | function_call
   35        | command_return
   36        | TK_PR_BREAK
   37        | TK_PR_CONTINUE

   38 local_var_declaration: TK_PR_STATIC TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   39                      | TK_PR_STATIC primitive_type TK_IDENTIFICADOR local_var_initialization
   40                      | TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   41                      | primitive_type TK_IDENTIFICADOR local_var_initialization
   42                      | primitive_type TK_IDENTIFICADOR

   43 assignment_command: identifier '=' expression

   44 input_command: TK_PR_INPUT expression

   45 output_command: TK_PR_OUTPUT expression
   46               | TK_PR_OUTPUT expression_list

   47 function_call: TK_IDENTIFICADOR '(' expression_list ')'
   48              | TK_IDENTIFICADOR '(' expression ')'

   49 shift: TK_OC_SL
   50      | TK_OC_SR

   51 shift_command: identifier shift expression

   52 command_return: TK_PR_RETURN expression

   53 if_statement: TK_PR_IF '(' expression ')' command_block
   54             | TK_PR_IF '(' expression ')' command_block TK_PR_ELSE command_block

   55 command_block_loop: '{' command_block_loop '}'
   56                   | '{' '}'
   57                   | command

   58 loop_while: TK_PR_WHILE '(' expression ')' command_block_loop

   59 loop_for: TK_PR_FOR '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

   60 loop_for_command_list: loop_for_command ',' loop_for_command_list
   61                      | loop_for_command

   62 loop_for_command: local_var_declaration
   63                 | shift_command
   64                 | assignment_command

   65 expression_list: expression ',' expression_list
   66                | ',' expression

   67 expression: terminal_expression

   68 terminal_expression: TK_IDENTIFICADOR
   69                    | TK_LIT_INT
   70                    | TK_LIT_FLOAT
   71                    | TK_LIT_CHAR
   72                    | TK_LIT_STRING
   73                    | TK_LIT_TRUE
   74                    | TK_LIT_FALSE

   75 expression: '(' expression ')'
   76           | '+' expression
   77           | '-' expression
   78           | '!' expression
   79           | '&' expression
   80           | '*' expression
   81           | '?' expression
   82           | '#' expression
   83           | expression '+' expression
   84           | expression '-' expression
   85           | expression '*' expression
   86           | expression '/' expression
   87           | expression '%' expression
   88           | expression '|' expression
   89           | expression '&' expression
   90           | expression '^' expression
   91           | expression '?' expression ':' expression

   92 local_var_initialization: TK_OC_LE TK_IDENTIFICADOR
   93                         | TK_OC_LE TK_LIT_CHAR
   94                         | TK_OC_LE TK_LIT_STRING
   95                         | TK_OC_LE TK_LIT_FLOAT
   96                         | TK_OC_LE TK_LIT_INT


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 78
    '#' (35) 82
    '%' (37) 87
    '&' (38) 79 89
    '(' (40) 15 16 47 48 53 54 58 59 75
    ')' (41) 15 16 47 48 53 54 58 59 75
    '*' (42) 80 85
    '+' (43) 76 83
    ',' (44) 19 60 65 66
    '-' (45) 77 84
    '/' (47) 86
    ':' (58) 59 91
    ';' (59) 5 6 23
    '=' (61) 43
    '?' (63) 81 91
    '[' (91) 14
    ']' (93) 14
    '^' (94) 90
    '{' (123) 22 55 56
    '|' (124) 88
    '}' (125) 22 55 56
    error (256)
    TK_PR_INT (258) 8
    TK_PR_FLOAT (259) 9
    TK_PR_BOOL (260) 11
    TK_PR_CHAR (261) 10
    TK_PR_STRING (262) 12
    TK_PR_IF (263) 53 54
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 54
    TK_PR_WHILE (266) 58
    TK_PR_DO (267)
    TK_PR_INPUT (268) 44
    TK_PR_OUTPUT (269) 45 46
    TK_PR_RETURN (270) 52
    TK_PR_CONST (271) 20 38 40
    TK_PR_STATIC (272) 5 15 38 39
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 59
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 36
    TK_PR_CONTINUE (278) 37
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE (285) 92 93 94 95 96
    TK_OC_GE (286)
    TK_OC_EQ (287)
    TK_OC_NE (288)
    TK_OC_AND (289)
    TK_OC_OR (290)
    TK_OC_SL (291) 49
    TK_OC_SR (292) 50
    TK_OC_FORWARD_PIPE (293)
    TK_OC_BASH_PIPE (294)
    TK_LIT_INT (295) 14 69 96
    TK_LIT_FLOAT (296) 70 95
    TK_LIT_FALSE (297) 74
    TK_LIT_TRUE (298) 73
    TK_LIT_CHAR (299) 71 93
    TK_LIT_STRING (300) 72 94
    TK_IDENTIFICADOR (301) 13 14 15 16 20 21 38 39 40 41 42 47 48 68 92
    TOKEN_ERRO (302)


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    program (70)
        on left: 1 2
        on right: 0 2
    grammars (71)
        on left: 3 4
        on right: 2
    global_var_declaration (72)
        on left: 5 6
        on right: 3
    decl (73)
        on left: 7
        on right: 5 6
    primitive_type (74)
        on left: 8 9 10 11 12
        on right: 7 15 16 20 21 38 39 40 41 42
    identifier (75)
        on left: 13 14
        on right: 7 43 51
    function_declaration (76)
        on left: 15 16
        on right: 4
    function_parameters_list (77)
        on left: 17 18 19
        on right: 15 16 19
    function_parameters_argument (78)
        on left: 20 21
        on right: 18 19
    command_block (79)
        on left: 22
        on right: 15 16 26 53 54
    command_list (80)
        on left: 23 24 25 26 27
        on right: 22 23 24 25
    command (81)
        on left: 28 29 30 31 32 33 34 35 36 37
        on right: 23 57
    local_var_declaration (82)
        on left: 38 39 40 41 42
        on right: 29 62
    assignment_command (83)
        on left: 43
        on right: 31 64
    input_command (84)
        on left: 44
        on right: 32
    output_command (85)
        on left: 45 46
        on right: 33
    function_call (86)
        on left: 47 48
        on right: 34
    shift (87)
        on left: 49 50
        on right: 51
    shift_command (88)
        on left: 51
        on right: 30 63
    command_return (89)
        on left: 52
        on right: 35
    if_statement (90)
        on left: 53 54
        on right: 28
    command_block_loop (91)
        on left: 55 56 57
        on right: 55 58 59
    loop_while (92)
        on left: 58
        on right: 24
    loop_for (93)
        on left: 59
        on right: 25
    loop_for_command_list (94)
        on left: 60 61
        on right: 59 60
    loop_for_command (95)
        on left: 62 63 64
        on right: 60 61
    expression_list <ast_node> (96)
        on left: 65 66
        on right: 46 47 65
    expression <ast_node> (97)
        on left: 67 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 43 44 45 48 51 52 53 54 58 59 65 66 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    terminal_expression (98)
        on left: 68 69 70 71 72 73 74
        on right: 67
    local_var_initialization (99)
        on left: 92 93 94 95 96
        on right: 38 39 40 41


State 0

    0 $accept: . program $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program                 go to state 7
    grammars                go to state 8
    global_var_declaration  go to state 9
    decl                    go to state 10
    primitive_type          go to state 11
    function_declaration    go to state 12


State 1

    8 primitive_type: TK_PR_INT .

    $default  reduce using rule 8 (primitive_type)


State 2

    9 primitive_type: TK_PR_FLOAT .

    $default  reduce using rule 9 (primitive_type)


State 3

   11 primitive_type: TK_PR_BOOL .

    $default  reduce using rule 11 (primitive_type)


State 4

   10 primitive_type: TK_PR_CHAR .

    $default  reduce using rule 10 (primitive_type)


State 5

   12 primitive_type: TK_PR_STRING .

    $default  reduce using rule 12 (primitive_type)


State 6

    5 global_var_declaration: TK_PR_STATIC . decl ';'
   15 function_declaration: TK_PR_STATIC . primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    decl            go to state 13
    primitive_type  go to state 14


State 7

    0 $accept: program . $end

    $end  shift, and go to state 15


State 8

    2 program: grammars . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program                 go to state 16
    grammars                go to state 8
    global_var_declaration  go to state 9
    decl                    go to state 10
    primitive_type          go to state 11
    function_declaration    go to state 12


State 9

    3 grammars: global_var_declaration .

    $default  reduce using rule 3 (grammars)


State 10

    6 global_var_declaration: decl . ';'

    ';'  shift, and go to state 17


State 11

    7 decl: primitive_type . identifier
   16 function_declaration: primitive_type . TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_IDENTIFICADOR  shift, and go to state 18

    identifier  go to state 19


State 12

    4 grammars: function_declaration .

    $default  reduce using rule 4 (grammars)


State 13

    5 global_var_declaration: TK_PR_STATIC decl . ';'

    ';'  shift, and go to state 20


State 14

    7 decl: primitive_type . identifier
   15 function_declaration: TK_PR_STATIC primitive_type . TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_IDENTIFICADOR  shift, and go to state 21

    identifier  go to state 19


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 program: grammars program .

    $default  reduce using rule 2 (program)


State 17

    6 global_var_declaration: decl ';' .

    $default  reduce using rule 6 (global_var_declaration)


State 18

   13 identifier: TK_IDENTIFICADOR .
   14           | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   16 function_declaration: primitive_type TK_IDENTIFICADOR . '(' function_parameters_list ')' command_block

    '['  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 13 (identifier)


State 19

    7 decl: primitive_type identifier .

    $default  reduce using rule 7 (decl)


State 20

    5 global_var_declaration: TK_PR_STATIC decl ';' .

    $default  reduce using rule 5 (global_var_declaration)


State 21

   13 identifier: TK_IDENTIFICADOR .
   14           | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR . '(' function_parameters_list ')' command_block

    '['  shift, and go to state 22
    '('  shift, and go to state 24

    $default  reduce using rule 13 (identifier)


State 22

   14 identifier: TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 25


State 23

   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' . function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 26

    $default  reduce using rule 17 (function_parameters_list)

    primitive_type                go to state 27
    function_parameters_list      go to state 28
    function_parameters_argument  go to state 29


State 24

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' . function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 26

    $default  reduce using rule 17 (function_parameters_list)

    primitive_type                go to state 27
    function_parameters_list      go to state 30
    function_parameters_argument  go to state 29


State 25

   14 identifier: TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 31


State 26

   20 function_parameters_argument: TK_PR_CONST . primitive_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 32


State 27

   21 function_parameters_argument: primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 33


State 28

   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' function_parameters_list . ')' command_block

    ')'  shift, and go to state 34


State 29

   18 function_parameters_list: function_parameters_argument .
   19                         | function_parameters_argument . ',' function_parameters_list

    ','  shift, and go to state 35

    $default  reduce using rule 18 (function_parameters_list)


State 30

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list . ')' command_block

    ')'  shift, and go to state 36


State 31

   14 identifier: TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    $default  reduce using rule 14 (identifier)


State 32

   20 function_parameters_argument: TK_PR_CONST primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 37


State 33

   21 function_parameters_argument: primitive_type TK_IDENTIFICADOR .

    $default  reduce using rule 21 (function_parameters_argument)


State 34

   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' . command_block

    '{'  shift, and go to state 38

    command_block  go to state 39


State 35

   19 function_parameters_list: function_parameters_argument ',' . function_parameters_list

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 26

    $default  reduce using rule 17 (function_parameters_list)

    primitive_type                go to state 27
    function_parameters_list      go to state 40
    function_parameters_argument  go to state 29


State 36

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' . command_block

    '{'  shift, and go to state 38

    command_block  go to state 41


State 37

   20 function_parameters_argument: TK_PR_CONST primitive_type TK_IDENTIFICADOR .

    $default  reduce using rule 20 (function_parameters_argument)


State 38

   22 command_block: '{' . command_list '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 42
    TK_PR_WHILE       shift, and go to state 43
    TK_PR_INPUT       shift, and go to state 44
    TK_PR_OUTPUT      shift, and go to state 45
    TK_PR_RETURN      shift, and go to state 46
    TK_PR_CONST       shift, and go to state 47
    TK_PR_STATIC      shift, and go to state 48
    TK_PR_FOR         shift, and go to state 49
    TK_PR_BREAK       shift, and go to state 50
    TK_PR_CONTINUE    shift, and go to state 51
    TK_IDENTIFICADOR  shift, and go to state 52
    '{'               shift, and go to state 38

    $default  reduce using rule 27 (command_list)

    primitive_type         go to state 53
    identifier             go to state 54
    command_block          go to state 55
    command_list           go to state 56
    command                go to state 57
    local_var_declaration  go to state 58
    assignment_command     go to state 59
    input_command          go to state 60
    output_command         go to state 61
    function_call          go to state 62
    shift_command          go to state 63
    command_return         go to state 64
    if_statement           go to state 65
    loop_while             go to state 66
    loop_for               go to state 67


State 39

   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block .

    $default  reduce using rule 16 (function_declaration)


State 40

   19 function_parameters_list: function_parameters_argument ',' function_parameters_list .

    $default  reduce using rule 19 (function_parameters_list)


State 41

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block .

    $default  reduce using rule 15 (function_declaration)


State 42

   53 if_statement: TK_PR_IF . '(' expression ')' command_block
   54             | TK_PR_IF . '(' expression ')' command_block TK_PR_ELSE command_block

    '('  shift, and go to state 68


State 43

   58 loop_while: TK_PR_WHILE . '(' expression ')' command_block_loop

    '('  shift, and go to state 69


State 44

   44 input_command: TK_PR_INPUT . expression

    TK_LIT_INT        shift, and go to state 70
    TK_LIT_FLOAT      shift, and go to state 71
    TK_LIT_FALSE      shift, and go to state 72
    TK_LIT_TRUE       shift, and go to state 73
    TK_LIT_CHAR       shift, and go to state 74
    TK_LIT_STRING     shift, and go to state 75
    TK_IDENTIFICADOR  shift, and go to state 76
    '!'               shift, and go to state 77
    '#'               shift, and go to state 78
    '*'               shift, and go to state 79
    '+'               shift, and go to state 80
    '-'               shift, and go to state 81
    '&'               shift, and go to state 82
    '?'               shift, and go to state 83
    '('               shift, and go to state 84

    expression           go to state 85
    terminal_expression  go to state 86


State 45

   45 output_command: TK_PR_OUTPUT . expression
   46               | TK_PR_OUTPUT . expression_list

    TK_LIT_INT        shift, and go to state 70
    TK_LIT_FLOAT      shift, and go to state 71
    TK_LIT_FALSE      shift, and go to state 72
    TK_LIT_TRUE       shift, and go to state 73
    TK_LIT_CHAR       shift, and go to state 74
    TK_LIT_STRING     shift, and go to state 75
    TK_IDENTIFICADOR  shift, and go to state 76
    '!'               shift, and go to state 77
    '#'               shift, and go to state 78
    '*'               shift, and go to state 79
    '+'               shift, and go to state 80
    '-'               shift, and go to state 81
    '&'               shift, and go to state 82
    '?'               shift, and go to state 83
    '('               shift, and go to state 84
    ','               shift, and go to state 87

    expression_list      go to state 88
    expression           go to state 89
    terminal_expression  go to state 86


State 46

   52 command_return: TK_PR_RETURN . expression

    TK_LIT_INT        shift, and go to state 70
    TK_LIT_FLOAT      shift, and go to state 71
    TK_LIT_FALSE      shift, and go to state 72
    TK_LIT_TRUE       shift, and go to state 73
    TK_LIT_CHAR       shift, and go to state 74
    TK_LIT_STRING     shift, and go to state 75
    TK_IDENTIFICADOR  shift, and go to state 76
    '!'               shift, and go to state 77
    '#'               shift, and go to state 78
    '*'               shift, and go to state 79
    '+'               shift, and go to state 80
    '-'               shift, and go to state 81
    '&'               shift, and go to state 82
    '?'               shift, and go to state 83
    '('               shift, and go to state 84

    expression           go to state 90
    terminal_expression  go to state 86


State 47

   40 local_var_declaration: TK_PR_CONST . primitive_type TK_IDENTIFICADOR local_var_initialization

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 91


State 48

   38 local_var_declaration: TK_PR_STATIC . TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   39                      | TK_PR_STATIC . primitive_type TK_IDENTIFICADOR local_var_initialization

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 92

    primitive_type  go to state 93


State 49

   59 loop_for: TK_PR_FOR . '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

    '('  shift, and go to state 94


State 50

   36 command: TK_PR_BREAK .

    $default  reduce using rule 36 (command)


State 51

   37 command: TK_PR_CONTINUE .

    $default  reduce using rule 37 (command)


State 52

   13 identifier: TK_IDENTIFICADOR .
   14           | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   47 function_call: TK_IDENTIFICADOR . '(' expression_list ')'
   48              | TK_IDENTIFICADOR . '(' expression ')'

    '['  shift, and go to state 22
    '('  shift, and go to state 95

    $default  reduce using rule 13 (identifier)


State 53
